Fixed discount message wrapping onto new line on small screens

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -296,10 +296,6 @@ h3 {
 
 @media (max-width: 720px) {
 
-    .settings {
-        font-size: 0.7rem;
-    }
-
     h3 {
         font-size: max(1.2rem, 5vw);
     }
