--- a/styles/style.css
+++ b/styles/style.css
@@ -477,7 +477,7 @@ h2 {
   }
 }
 @media (max-width: 600px) {
-  .settings button,
+  .settings .expandable,
   .header-nav {
     display: none;
   }
@@ -495,6 +495,11 @@ h2 {
   }
   h1.contact {
     background-image: url(../assets/contact-header-mobile.png);
+  }
+}
+@media (max-width: 420px) {
+  .settings {
+    font-size: 0.65rem;
   }
 }
 h3 {
@@ -953,9 +958,6 @@ h3::after {
   }
 }
 @media (max-width: 720px) {
-  .settings {
-    font-size: 0.7rem;
-  }
   h3 {
     font-size: max(1.2rem, 5vw);
   }
